logo alignment in mobile version fixed!

--- a/stylesheet/responsive.sass
+++ b/stylesheet/responsive.sass
@@ -1,7 +1,7 @@
 
 @media only screen and (max-width: 600px)
   #logo
-    margin-top: 10px
+    margin-top: 8px
   
   #menu
     z-index: 5
